--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,12 @@
         <meta charset="UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=The+Nautigal&display=swap');
+        </style>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200&family=The+Nautigal&display=swap');
+        </style>
         <title>Zoe + Cody</title>
     </head>
     <body>
