--- a/web/src/index.html
+++ b/web/src/index.html
@@ -5,10 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=The+Nautigal&display=swap');
-        </style>
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200&family=The+Nautigal&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200&family=Spectral&family=The+Nautigal&display=swap');
         </style>
         <title>Zoe + Cody</title>
     </head>
